--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -20,6 +20,5 @@ video {
   height: auto;
 }
 
-body{style= padding-top: 0px;}
-
-main style={padding-top: 50px;}
+body {padding-top: 0px;}
+main {padding-top: 50px;}
